2007-09-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* termhooks.h (struct terminal): Move all Lisp_Object fields traced by
	the GC to the beginning.

	* indent.h:
	* indent.c: Use EMACS_INT for ints coming from Elisp data.

	* indent.c (Fmove_to_column): Use EMACS_INT for buffer positions.

2007-09-25  Jason Rumney  <jasonr@gnu.org>

	* frame.c (make_terminal_frame): Remove special case for WINDOWSNT.

	* w32console.c (create_w32cons_output): Remove.

	* term.c (init_tty): Call init_sys_modes on WINDOWSNT also.

	* sysdep.c (init_sys_modes): Use set_terminal_modes_hook.
	(reset_sys_modes): Use reset_terminal_modes_hook.

2007-09-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* eval.c (do_autoload): Don't output any message.

2007-09-24  Juri Linkov  <juri@jurta.org>

	* emacs.c (standard_args): Change priority of "--no-splash"
	from 40 to 3.  Add "--no-desktop" with the same priority.

2007-09-23  Dmitry Antipov  <dmantipov@yandex.ru>

	* alloc.c (gc_sweep): Check cons cell mark bits word by word
	and optimize the case where they are all 1.

2007-09-23  Johannes Weiner  <hannes@saeurebad.de>

	* lisp.h (abs): Define if not defined.
	* keyboard.c, sound.c, w32term.c, xfaces.c, xterm.c:
	Don't define `abs', since it's defined in lisp.h.

2007-09-22  Eli Zaretskii  <eliz@gnu.org>

	* term.c (DEV_TTY): New macro.  Provide a definition for
	MS-Windows.
	(FRAME_TERMCAP_P) [WINDOWSNT]: Don't define to zero.
	(Fcontrolling_tty_p, Fresume_tty, dissociate_if_controlling_tty)
	(init_tty): Use DEV_TTY instead of "/dev/tty".
	[WINDOWSNT]: No need to protect from NAME arg being null.

2007-09-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* term.c (Fsuspend_tty): Run suspend-tty-functions before cleaning
	up the tty state.

2007-09-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* termhooks.h (term_gpm): Delete.  Use gpm_tty's NULLness instead.
	(gpm_tty): Change its type.
	* term.c (term_gpm): Delete.  Use gpm_tty's NULLness instead.